--- a/playbooks/glance/admin_openrc.j2
+++ b/playbooks/glance/admin_openrc.j2
@@ -1,5 +1,5 @@
 export OS_USERNAME=admin
-export OS_PASSWORD={{ admin_pass }}
+export OS_PASSWORD={{ credentials['admin_pass'] }}
 export OS_PROJECT_NAME=admin
 export OS_USER_DOMAIN_NAME=Default
 export OS_PROJECT_DOMAIN_NAME=Default
