--- a/playbooks/glance/glance-registry.conf.j2
+++ b/playbooks/glance/glance-registry.conf.j2
@@ -1,5 +1,6 @@
 [DEFAULT]
-enable_v1_registry=False
+allow_anonymous_access=true
+enable_v1_registry=true
 bind_host=127.0.0.1
 bind_port=9191
 workers=2
@@ -20,5 +21,3 @@ project_name=admin
 project_domain_name=Default
 [oslo_policy]
 policy_file=/etc/glance/policy.json
-[paste_deploy]
-flavor=keystone
