Make glance listen on IPv6
This patch makes glance bind to :: which will make
it work on IPv6. Thanks to the Dual-mode stack on CentOS
this will also work for IPv4 connections.

Change-Id: I820a3fa805db43e5848d904dcb667549a1f4e6cf
Signed-off-by: Evgheni Dereveanchin <ederevea@redhat.com>
Jira-ticket: https://ovirt-jira.atlassian.net/browse/OVIRT-2653

--- a/playbooks/glance/glance-api.conf.j2
+++ b/playbooks/glance/glance-api.conf.j2
@@ -2,7 +2,7 @@
 allow_anonymous_access=true
 enable_v1_api=true
 enable_v2_api=true
-bind_host=0.0.0.0
+bind_host=::
 bind_port=9292
 workers=4
 image_cache_dir=/var/lib/glance/image-cache
